# Digital-Signature

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp
cmake/: deploy_runtime.cmake  toolchain-mingw64-gcc.cmake
docker/: entrypoint.sh
math/: CMakeLists.txt  arithmetic.hpp  common.hpp  gauss.hpp  hash.hpp  polynomials.hpp
math/include/: polynomials.hpp
math/include/ntru/: ntru.hpp
math/ntru/: keys.hpp  ntru.hpp
math/src/: arithmetic.cpp
math/src/ntru/: keys.cpp
params/: params.json
src/: CMakeLists.txt  main.cpp
src/console/: console_util.cpp  console_util.h  key_input_output.cpp  key_input_output.h  param_input_output.cpp  param_input_output.h  settings.cpp  settings.hpp  sign_input_output.cpp  sign_input_output.h  ui.cpp  ui.h  util.cpp  util.h  utils.cpp  utils.hpp
src/controller/: controller.cpp  controller.h
src/math/: CMakeLists.txt
src/math/include/: arithmetic.h  arithmetic.hpp  common.hpp  hash.h  hash.hpp  keys.h  params.h  polynomials.hpp  rng.h  types.h
src/math/include/ntru/: keys.h  keys.hpp  ntru.hpp  sign.h
src/math/src/: arithmetic.cpp  hash.cpp  keys.cpp  params.cpp  polynomials.cpp  rng.cpp
src/math/src/ntru/: keys.cpp  ntru.cpp  sign.cpp
src/model/: model.cpp  model.h
src/network/: Client.h  Encryptor.h  FileReceiver.h  FileSender.h  Server.h
src/view/: view.cpp  view.h
